# ganim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: editor_main.cpp  ganim.hpp  ganim_main.cpp  overloaded.hpp  overview.md  script_main.cpp
src/examples/: basic_movement.cpp  basic_text.cpp  bivectors.cpp  examples.cpp  hello.ganim  lighting.cpp  non_uniform_scaling.cpp  oit.cpp  paths.cpp  paths_3d.cpp  polyhedra.cpp  scene_object.cpp  square_create.cpp  transforms.cpp  vectors.cpp  video.cpp
src/ganim/: color.cpp  color.hpp  copy_ptr.hpp  coroutine.hpp  fmap.hpp  generator.hpp  math.hpp  maybe_owning_ref.hpp  overview.md  rate_functions.cpp  rate_functions.hpp  unicode.cpp  unicode.hpp  unicode_categories.cpp  unicode_categories.hpp
src/ganim/animation/: all_animation.hpp  animation.hpp  color_stack.cpp  color_stack.hpp  creation.cpp  creation.hpp  fading.cpp  fading.hpp  group_animate.cpp  group_animate.hpp  indicate.cpp  indicate.hpp  overview.md  scaling.cpp  scaling.hpp  texture_transform.cpp  texture_transform.hpp  transform.cpp  transform.hpp
src/ganim/ga/: all_ga.hpp  conversions.cpp  conversions.hpp  exp.hpp  overview.md  pga2.hpp  pga3.hpp  print.hpp  sga.hpp  vga2.hpp  vga3.hpp
src/ganim/gl/: all_gl.hpp  buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  gl.hpp  overview.md  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
src/ganim/object/: all_object.hpp  animatable.cpp  animatable.hpp  arc.cpp  arc.hpp  arrow_path.cpp  arrow_path.hpp  bivector.cpp  bivector.hpp  brace.cpp  brace.hpp  character.cpp  character.hpp  cluster.hpp  drawable.hpp  drawable_object.hpp  group.cpp  group.hpp  group_base.cpp  group_base.hpp  image.cpp  image.hpp  object.cpp  object.hpp  object_ptr.hpp  overview.md  parallelogram_bivector.hpp  path.cpp  path.hpp  point.cpp  point.hpp  polygon_shape.cpp  polygon_shape.hpp  polyhedron.cpp  polyhedron.hpp  scene_object.cpp  scene_object.hpp  shaders.cpp  shaders.hpp  shape.cpp  (+14 more)
src/ganim/object/bases/: animatable.cpp  animatable.hpp  cluster.cpp  compound_object.cpp  compound_object.hpp  drawable.hpp  drawable_object.cpp  drawable_object.hpp  group.cpp  group.hpp  object.cpp  object.hpp  single_object.cpp  single_object.hpp  static_group.hpp  transformable.cpp  transformable.hpp  typed_group.hpp  updatable.cpp  updatable.hpp
src/ganim/object/group/: cluster.cpp  cluster.hpp  compound_object.cpp  compound_object.hpp  (+4 more)
src/ganim/render/: render.cpp
src/ganim/scene/: all_scene.hpp  base.cpp  base.hpp  camera.cpp  camera.hpp  overview.md  scene.cpp  scene.hpp
src/ganim/shaders/: basic_shader_color_fragment_main.glsl  basic_shader_color_vertex_main.glsl  basic_shader_fragment_main.glsl  basic_shader_fragment_uniforms.glsl  basic_shader_vertex_functions.glsl  basic_shader_vertex_main.glsl  basic_shader_vertex_uniforms.glsl  create_shader_fragment_main.glsl  create_shader_fragment_uniforms.glsl  fragment.glsl  geometry.glsl  noise_create_shader_fragment_functions.glsl  noise_create_shader_fragment_main.glsl  noise_create_shader_fragment_uniforms.glsl  noise_create_shader_vertex_main.glsl  overview.md  shape_fragment.frag  shape_vertex.vert  texture_shader_fragment_main.glsl  texture_shader_fragment_uniforms.glsl  texture_shader_vertex_main.glsl  texture_shape_fragment.frag  texture_shape_vertex.vert  vector_shader_vertex_main.glsl  vector_shader_vertex_uniforms.glsl  vertex.glsl
src/ganim/util/: alpha_threshold.cpp  alpha_threshold.hpp  box.cpp  box.hpp  discrete_interpolate.cpp  discrete_interpolate.hpp  distance_transform.cpp  distance_transform.hpp  stb_image.h  stb_image_write.h  triangle_rotor.cpp  triangle_rotor.hpp  triangulation.cpp  triangulation.hpp
src/ganim/video_writer/: libav.h  video_writer.cpp  video_writer.hpp
src/parse/: ganimscript.grammar  gex_dimension.grammar  gex_number.grammar  parse.cpp  sample_grammar.grammar  skeleton.cpp  skeleton.hpp
src/script/: any_pointer.hpp  execute_file.cpp  execute_file.hpp  main.cpp  non_owning_value.hpp  owning_value.cpp  owning_value.hpp  script.cpp  script.hpp  script_exception.hpp  string_to_commands.cpp  string_to_commands.hpp  symbol_table.cpp  symbol_table.hpp  tokenize.cpp  tokenize.hpp  type.cpp  type.hpp  unicode_categories.cpp  value.hpp  variable.hpp  x_macro_type.hpp
src/script/bytecode/: bytecodes.hpp  disassemble.cpp  disassemble.hpp  interpreter.cpp  interpreter.hpp
src/script/command/: break.cpp  break.hpp  command.cpp  command.hpp  continue.cpp  continue.hpp  declare_variable.cpp  declare_variable.hpp  expression.cpp  expression.hpp  if.cpp  if.hpp  loop.cpp  loop.hpp  print.cpp  print.hpp  set.cpp  set.hpp  while.cpp  while.hpp
src/script/compile/: compile.cpp  compile.hpp  compiler.cpp  compiler.hpp  compiler_state.cpp  compiler_state.hpp  symbol_table.cpp  symbol_table.hpp  type.cpp  type.hpp  value.hpp  variable.hpp
src/script/expression/: binary.cpp  binary.hpp  boolean_constant.cpp  boolean_constant.hpp  constant.cpp  constant.hpp  expression.cpp  expression.hpp  float_constant.cpp  float_constant.hpp  function.cpp  function.hpp  integer_constant.cpp  integer_constant.hpp  string_constant.cpp  string_constant.hpp  unary.cpp  unary.hpp  variable.cpp  variable.hpp
src/script/function/: assignment.hpp  binary.hpp  boolean.hpp  comparison.hpp  equality.hpp  function.hpp  print.cpp  print.hpp  unary.hpp
src/script/parse/: expression.hpp  parse.cpp  parse.hpp  statement.hpp  token.hpp  tokenize.cpp  tokenize.hpp
src/script/syntax/: expression.cpp  expression.hpp  grammar_types.cpp  grammar_types.hpp  statement.hpp  token.hpp  type.hpp
src/script/type/: type.hpp
src/script/variable/: variable.hpp
src/test/: test_context.cpp
src/test/ga/: multivector.cpp
src/test/ganim/: approx_color.cpp  approx_color.hpp  color.cpp  coroutine.cpp  ga_equals.hpp  maybe_owning_ref.cpp  rate_functions.cpp  unicode.cpp
src/test/parse/: sample_grammar.cpp
src/test/scene/: base.cpp
src/test/script/: any_pointer.cpp  run_script.cpp  run_script.hpp  script.cpp  tokenize.cpp
test_files/: math.dvi  test.dvi
(+184 files in other folders)
